frontend: ugly workaround for download dialog overflow (fixes #184)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,11 @@ body {
   color: #eee;
   margin-bottom: 35px;
 }
+
+/* Make modal dialogs scrollable */
+.modal-dialog {
+  height: calc(100% - 70px);
+}
+.modal-content {
+  overflow: auto;
+}
